<resources>
    <string name="app_name">IWantEat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let us feed you</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="have_acc">Already have account?</string>
    <string name="no_acc">Have no account?</string>
    <string name="we_send_code">We sent code to your email</string>
    <string name="enter_code">Enter code from email</string>
    <string name="code">Code</string>
    <string name="send_code">Send code</string>
    <string name="days_count">Days count:</string>
    <string name="shop">Shop:</string>
    <string name="ch_shop">Select shop</string>
    <string name="confirm">Confirm</string>
    <string name="Price">Price</string>

    <string-array name="shops_array">
        <item>Пятерочка</item>
        <item>Магнит</item>
        <item>Amwine</item>
        <item>Верный</item>
        <item>Винлаб</item>
        <item>Вкусвилл</item>
        <item>Семишагофф</item>
        <item>Перекресток</item>
        <item>РеалЪ</item>
        <item>Норман</item>
        <item>Великолукский мясокомбинат</item>
        <item>Мини Лента</item>
        <item>Лента Гипер</item>
        <item>Лента Супермаркет</item>
        <item>Окей</item>
        <item>Eurospar</item>
        <item>Ашан</item>
        <item>Ешь Деревенское</item>
        <item>Росал</item>
        <item>ГлавПиво</item>
    </string-array>

    <string-array name="shops_array_en">
        <item>5ka</item>
        <item>Магнит</item>
        <item>Amwine</item>
        <item>Верный</item>
        <item>Винлаб</item>
        <item>Вкусвилл</item>
        <item>Семишагофф</item>
        <item>Перекресток</item>
        <item>РеалЪ</item>
        <item>Норман</item>
        <item>Великолукский мясокомбинат</item>
        <item>Мини Лента</item>
        <item>Лента Гипер</item>
        <item>Лента Супермаркет</item>
        <item>Окей</item>
        <item>Eurospar</item>
        <item>Ашан</item>
        <item>Ешь Деревенское</item>
        <item>Росал</item>
        <item>ГлавПиво</item>
    </string-array>

    <string-array name="time_array">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>


</resources>