<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".code">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_send_code"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/email_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textSize="17sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/code_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:textSize="17sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
       />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/code"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_send_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:text="@string/send_code"/>

</LinearLayout>