<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChoiceFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/shop"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop"
            android:textSize="25sp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/shop_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="22sp"
            android:textStyle="italic"
            android:layout_toEndOf="@+id/shop"
            />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/ch_shop" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/days"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_count"
            android:textSize="25sp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            />

        <NumberPicker
            android:id="@+id/days_picker"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/days"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Price"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/et_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Price"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/confirm" />

</LinearLayout>